--- a/UDPPractice/Views/MainWindow.xaml
+++ b/UDPPractice/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="UDPPractice.MainWindow"
+﻿<Window x:Class="UDPPractice.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UDPPractice"
+        xmlns:local="clr-namespace:UDPPractice.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="150" Width="400">
     <StackPanel>
